syntax = "proto3";

package auth;

option go_package = "./pb/auth";

service Auth {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc RefreshToken(RefreshTokenRequest) returns (LoginResponse);
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
}

message RegisterRequest {
  string email = 1;
  string name = 2;
  string surname = 3;
  string password = 4;
}

message RegisterResponse {
  string message = 1;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  string id = 2;
  string name = 3;
  string surname = 4;
}

message RefreshTokenRequest {
  string token = 1;
}

message ValidateTokenRequest {
  string token = 1;
  string userId = 2;
}

message ValidateTokenResponse {
  bool isValid = 1;
}
